[package]
name = "markdown-parser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pulldown-cmark = "0.13.0"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
